; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-fs-event.c_fs_event_create_files.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-fs-event.c_fs_event_create_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fs_event_created = common dso_local global i64 0, align 8
@fs_event_file_count = common dso_local global i64 0, align 8
@timer = common dso_local global i32 0, align 4
@CREATE_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @fs_event_create_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fs_event_create_files(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i64, i64* @fs_event_created, align 8
  %4 = load i64, i64* @fs_event_file_count, align 8
  %5 = icmp slt i64 %3, %4
  %6 = zext i1 %5 to i32
  %7 = call i32 @ASSERT(i32 %6)
  %8 = load i64, i64* @fs_event_created, align 8
  %9 = call i32 @fs_event_get_filename(i64 %8)
  %10 = call i32 @create_file(i32 %9)
  %11 = load i64, i64* @fs_event_created, align 8
  %12 = add nsw i64 %11, 1
  store i64 %12, i64* @fs_event_created, align 8
  %13 = load i64, i64* @fs_event_file_count, align 8
  %14 = icmp slt i64 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load i32, i32* @CREATE_TIMEOUT, align 4
  %17 = call i64 @uv_timer_start(i32* @timer, void (i32*)* @fs_event_create_files, i32 %16, i32 0)
  %18 = icmp eq i64 0, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @ASSERT(i32 %19)
  br label %21

21:                                               ; preds = %15, %1
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @create_file(i32) #1

declare dso_local i32 @fs_event_get_filename(i64) #1

declare dso_local i64 @uv_timer_start(i32*, void (i32*)*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
